# blue-time

./: Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
data/: io.github.vlucas14sp.BlueTime.desktop
po/: blue-time.pot  pt_BR.po
src/: autostart.rs  config.rs  icon.rs  main.rs  stats.rs  timer.rs  tray.rs
src/ui/: mod.rs  prefs.rs  stats_dialog.rs  window.rs
