[package]
name = "blue-time"
version = "0.1.0"
edition = "2024"
description = "A simple Pomodoro timer for GNOME"
license = "MIT"
repository = "https://github.com/vlucas14sp/blue-time"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
