[package]
name = "blue-time"
version = "0.1.0"
edition = "2024"
description = "A simple Pomodoro timer for GNOME"
license = "MIT"
repository = "https://github.com/vlucas14sp/blue-time"

[dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_5"] }
directories = "6.0.0"
gtk = { version = "0.11.3", package = "gtk4", features = ["v4_14"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
